Fixed a display issue in focused ItemPalette entries

--- a/woost/views/resources/styles/backoffice.css
+++ b/woost/views/resources/styles/backoffice.css
@@ -3217,6 +3217,10 @@ div.success_label {
     vertical-align: middle;
 }
 
+.ItemPalette .palette_entry .button {
+    display: inline-block;
+}
+
 /* BackOfficeItemViewOverlay
 -----------------------------------------------------------------------------*/
 .BackOfficeItemView .block_map .explanation {
