--- a/woost/views/resources/styles/backoffice.css
+++ b/woost/views/resources/styles/backoffice.css
@@ -3550,3 +3550,29 @@ div.success_label {
     margin: 1em 0;
 }
 
+/* Annotations extension
+-----------------------------------------------------------------------------*/
+.BackOfficeLayout .Form .annotation_dropdown {
+    position: relative;
+    left: 0.5em;
+    top: 0.3em;
+}
+
+.BackOfficeLayout .Form .annotation_dropdown > .button .icon {
+    opacity: 0.3;
+    margin: 0.1em 0.3em;
+}
+
+.BackOfficeLayout .Form .field_instance.with_annotation .annotation_dropdown > .button .icon {
+    opacity: 1;
+}
+
+.BackOfficeLayout .Form .annotation_dropdown .dropdown_arrow {
+    display: none;
+}
+
+.BackOfficeLayout .Form .annotation_dropdown textarea {
+    width: 30em;
+    height: 22em;
+}
+
