--- a/woost/views/resources/styles/backoffice.css
+++ b/woost/views/resources/styles/backoffice.css
@@ -1046,6 +1046,7 @@ body.scripted .BackOfficeLayout .Table .row_selection_control {
     font-size: 1em;
     font-weight: normal;
     line-height: 1.2em;
+    margin-left: 0.5em;
 }
 
 .BackOfficeItemView h2 .item_icon {
@@ -2054,13 +2055,8 @@ button.TypeSelectorButton span {
     margin-top: 0.3em;
 }
 
-.BackOfficeItemView .edit_form_frame,
 .BackOfficeEditView .edit_form {
-    padding: 1em;
-}
-
-.BackOfficeEditView .edit_form_frame {
-    padding: 0;
+    padding-top: 0.8em;
 }
 
 .BackOfficeFieldsView .ContentView {
