--- a/woost/views/resources/styles/backoffice.css
+++ b/woost/views/resources/styles/backoffice.css
@@ -707,6 +707,10 @@ body.modal {
     overflow: hidden;
 }
 
+.scripted .DropdownPanel > .button {
+    white-space: nowrap;
+}
+
 .scripted .DropdownPanel-expanded > .button,
 .scripted .DropdownPanel-expanded > .button:hover {
     border: 1px solid rgb(190,200,210);
