Added the save_and_close action in the backoffice.

--- a/woost/views/resources/styles/backoffice.css
+++ b/woost/views/resources/styles/backoffice.css
@@ -1928,6 +1928,7 @@ body.scripted .BackOfficeLayout .ThumbnailsContentView .collection_display input
 
 .BackOfficeLayout .toolbar .preview_action,
 .BackOfficeLayout .toolbar .save_action,
+.BackOfficeLayout .toolbar .save_and_close_action,
 .BackOfficeLayout .toolbar .close_action,
 .BackOfficeLayout .toolbar .cancel_action {
     float: right;
